--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "directories": {
-    "test": "tests"
+    "test": "test"
   },
   "scripts": {
     "start": "node ./src/server.js",
@@ -26,5 +26,8 @@
     "chai-http": "*",
     "mocha": "*",
     "nodemon": "^2.0.12"
+  },
+  "engines": {
+    "node": "14"
   }
 }
